--- a/index.html
+++ b/index.html
@@ -12,26 +12,73 @@
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@1,700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Amiri&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6f231be1f6.js" crossorigin="anonymous"></script>
+    <style>
+
+        body{
+            background-image: url('img/nw_header_img.jpg');
+            background-size: 100px;
+            margin: 0;
+            border: 0;
+            padding: 0;
+        }
+
+        .content{
+            /* background-image: url('img/pexels-grafixartphoto-samir-belhamra-4254548.jpg'); */
+            background-size: 100px;
+        }
+
+        .hero_image{
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/hero_niqqy.jpg");
+            /* background-size: 800px; */
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            height: 800px;
+            /* height: 1200px;
+            background-size: cover;
+            position: relative; */
+        }
+    </style>
 </head>
 <body>
+    <header class="init_header">
+        <h2>Niqqy Woofaj</h2>
+    </header>
     <div class="container">
-        <header>
-            <h2>&lt;header&gt;</h2>
-        </header>
         <nav class="navbar">
-            <a href="index.html" class="home_link">Home</a>
-            <a href="about.html" class="about_link">About</a>
-            <a href="contact.html" class="contact_link">Contact</a>
+            <!-- nav logo class="nav_logo" -->
+            <img src="img/nw_logo_4.png" alt="Niqqy Logo" class="nw_logo">
+            <a href="index.html" class="nav_link">Home</a>
+            <a href="about.html" class="nav_link">About</a>
+            <a href="contact.html" class="nav_link">Contact</a>
+            <!-- icon example, will properly place when footer is created -->
             <i class="fab fa-instagram"></i>
         </nav>
     </div>
 
-    <audio controls>
-        <source src="media/bensound-allthat.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
+    <div class="hero_image">
+        <div class="hero_text">
+            <h1>henlo my name is niqqy</h1>
+            <p>and casey is my human</p>
+        </div>
+    </div>
 
-    <iframe width="420" height="315" src="https://www.youtube.com/embed/QAgMdFHgb1M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="content">
+        <!-- placeholder sound -->
+        <audio class="meow" controls>
+            <source src="media/bensound-allthat.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+
+        <!-- placeholder video -->
+        <iframe class="meow" width="420" height="315" 
+            src="https://www.youtube.com/embed/QAgMdFHgb1M&controls=1">
+        </iframe>
+        
+        <!-- text placeholderish -->
+        <p clas="meow">You can avoid the image from being repeated by setting the background-repeat property to "no-repeat".</p>
+
+    </div>
 
 </body>
 </html>
