--- a/contact.html
+++ b/contact.html
@@ -12,19 +12,45 @@
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@1,700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Amiri&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6f231be1f6.js" crossorigin="anonymous"></script>
+    <style>
+
+        body{
+            background-image: url('img/nw_header_img.jpg');
+            background-size: 100px;
+            margin: 0;
+            border: 0;
+            padding: 0;
+            height: 100%;
+        }
+
+        .content{
+            /* background-image: url('img/pexels-grafixartphoto-samir-belhamra-4254548.jpg'); */
+            background-size: 1000px;
+        }
+
+    </style>
 </head>
 <body>
     <div class="container">
-        <header>
-            <h2>&lt;header&gt;</h2>
-        </header>
         <nav class="navbar">
-            <a href="index.html" class="home_link">Home</a>
-            <a href="about.html" class="about_link">About</a>
-            <a href="contact.html" class="contact_link">Contact</a>
-            <i class="fab fa-instagram"></i>
+            <!-- nav logo class="nav_logo" -->
+            <img src="img/nw_logo_4.png" alt="Niqqy Logo" class="nw_logo">
+            <a href="index.html" class="nav_link">Home</a>
+            <a href="about.html" class="nav_link">About</a>
+            <a href="contact.html" class="nav_link">Contact</a>
         </nav>
     </div>
 
+    <div class="content">
+        <iframe width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3173.32674928322!2d-121.89667004914963!3d37.31108714637494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808e33511ffbfca5%3A0x6452c8ef296142aa!2sQuality%20Pet%20Spot%20Willow%20Glen!5e0!3m2!1sen!2sus!4v1639479396886!5m2!1sen!2sus" >
+        </iframe>
+    </div>
+
 </body>
+<footer>
+    <a href="https://www.instagram.com/srirachy" class="fab fa-instagram"></a>
+    <a href="https://www.linkedin.com/in/caseyereyes" class="fab fa-linkedin"></a>
+    <p class="footer_copyright">&copy; Niqqy Woofaj <script>document.write(new Date().getFullYear())</script></p>
+</footer>
 </html>
