about page complete

--- a/about.html
+++ b/about.html
@@ -20,11 +20,10 @@
             margin: 0;
             border: 0;
             padding: 0;
-            height: 100%;
+            height: 100% + 20px;
         }
 
         .content{
-            /* background-image: url('img/pexels-grafixartphoto-samir-belhamra-4254548.jpg'); */
             background-size: 100px;
         }
 
@@ -41,23 +40,39 @@
         </nav>
     </div>
 
+    <div class="spacing"></div>
+
     <div class="video_content">
         <div class="video_col_one">
             <video width="400" height="800" controls muted=1 autoplay=1>
                 <source src="media/nw_icecream_1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+            <p class="post_video_text">Niqqy enjoying the best of treats.</p>
         </div>
         <!-- text placeholderish -->
         <div class="video_col_two">
-            <p clas="video_text">You can avoid the image from being repeated by setting the background-repeat property to "no-repeat".</p>
+            <p class="video_text"><br><br><br>At Niqqy Woofaj, we thrive on the ability to get to know our clients and customize their their experience
+                to create a good time for every doggo and assure a safe and more enjoyable experience; not only for our clients, but also for
+                their humans.
+            </p>
         </div>
     </div>
 
+    <div class="spacing"></div>
+
+    <div class="covid_update_text">
+        <strong class="c_initial">COVID-19 UPDATE</strong>
+        <hr class="rounded">
+        <strong class="c_open">Our Woofaj experience locations are OPEN!</strong>
+        <p class="c_gen">We now have a new location at the Fresno location! Give us a visit for your pet experience necessities.</p>
+        <p class="c_gen">Use our locations for pet socializing as well in accordance with COVID-19 standards.</p>
+    </div>
+
+    <footer>
+        <a href="https://www.instagram.com/srirachy" class="fab fa-instagram"></a>
+        <a href="https://www.linkedin.com/in/caseyereyes" class="fab fa-linkedin"></a>
+        <p class="footer_copyright">&copy; Niqqy Woofaj <script>document.write(new Date().getFullYear())</script></p>
+    </footer>
 </body>
-<footer>
-    <a href="https://www.instagram.com/srirachy" class="fab fa-instagram"></a>
-    <a href="https://www.linkedin.com/in/caseyereyes" class="fab fa-linkedin"></a>
-    <p class="footer_copyright">&copy; Niqqy Woofaj <script>document.write(new Date().getFullYear())</script></p>
-</footer>
 </html>
