--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         }
 
         .content{
-            /* background-image: url('img/pexels-grafixartphoto-samir-belhamra-4254548.jpg'); */
             background-size: 100px;
         }
 
@@ -53,10 +52,12 @@
         </div>
     </div>
 
-    <div class="muzak">
+    <div class="spacing"></div>
+
+    <div class="muzak_container">
         <div class="muzak_text">
-            <h2>Welcome to Niqqy Woofaj!</h2>
-            <p>Press play for a gudtime</p>
+            <h2 class="welcome_text">Welcome to Niqqy Woofaj!</h2>
+            <p class="gudtime_text">Press play for a gudtime</p>
         </div>
         <div class="muzak_portion">
             <audio class="allthat" controls>
@@ -64,10 +65,27 @@
                 Your browser does not support the audio element.
             </audio>
         </div>
+        <div class="muzak_text">
+            <p class="gudtime_text">(Like my gud friends below)</p>
+        </div>
     </div>
 
+    <div class="spacing"></div>
+
+    <!-- placeholder -->
     <div class="index_content">
-        <div class="push"></div>
+        <div class="gudtime_col_one">
+            <img src="img/doggos_vibin.jpg" height=400px alt="Image of dogs in sunnies.">
+        </div>
+        <div class="gudtime_col_two">
+            <img src="img/look_back_at_it.jpg" height=400px alt="Image of a dog in a boat.">
+        </div>
+        <div class="gudtime_col_three">
+            <img src="img/sun_bathing.jpg" height=400px alt="Image of a dog enjoying the sun.">
+        </div>
+        <div class="gudtime_col_four">
+            <img src="img/running_wild.jpg" height=400px alt="Image of a dog running free.">
+        </div>
     </div>
 
     <footer>
