--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,6 @@
         }
 
         .content{
-            /* background-image: url('img/pexels-grafixartphoto-samir-belhamra-4254548.jpg'); */
             background-size: 1000px;
         }
 
@@ -41,16 +40,20 @@
         </nav>
     </div>
 
+    <div class="">
+        
+    </div>
+
     <div class="content">
         <iframe width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3173.32674928322!2d-121.89667004914963!3d37.31108714637494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808e33511ffbfca5%3A0x6452c8ef296142aa!2sQuality%20Pet%20Spot%20Willow%20Glen!5e0!3m2!1sen!2sus!4v1639479396886!5m2!1sen!2sus" >
         </iframe>
     </div>
 
+    <footer>
+        <a href="https://www.instagram.com/srirachy" class="fab fa-instagram"></a>
+        <a href="https://www.linkedin.com/in/caseyereyes" class="fab fa-linkedin"></a>
+        <p class="footer_copyright">&copy; Niqqy Woofaj <script>document.write(new Date().getFullYear())</script></p>
+    </footer>
 </body>
-<footer>
-    <a href="https://www.instagram.com/srirachy" class="fab fa-instagram"></a>
-    <a href="https://www.linkedin.com/in/caseyereyes" class="fab fa-linkedin"></a>
-    <p class="footer_copyright">&copy; Niqqy Woofaj <script>document.write(new Date().getFullYear())</script></p>
-</footer>
 </html>
