--- a/index.html
+++ b/index.html
@@ -66,13 +66,12 @@
             </audio>
         </div>
         <div class="muzak_text">
-            <p class="gudtime_text">(Like my gud friends below)</p>
+            <i class="post_gudtime_text">(Like my gud friends below)</i>
         </div>
     </div>
 
     <div class="spacing"></div>
 
-    <!-- placeholder -->
     <div class="index_content">
         <div class="gudtime_col_one">
             <img src="img/doggos_vibin.jpg" height=400px alt="Image of dogs in sunnies.">
@@ -86,6 +85,12 @@
         <div class="gudtime_col_four">
             <img src="img/running_wild.jpg" height=400px alt="Image of a dog running free.">
         </div>
+    </div>
+
+    <div class="spacing"></div>
+
+    <div class="sv_pet_event">
+        <strong class="sv_event_header">Silicon Valley Pet Event (Past)</strong>
     </div>
 
     <footer>
