added event section for index

--- a/about.html
+++ b/about.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@1,700&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Amiri&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Podkova&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/6f231be1f6.js" crossorigin="anonymous"></script>
     <style>
 
@@ -40,8 +39,6 @@
         </nav>
     </div>
 
-    <div class="spacing"></div>
-
     <div class="video_content">
         <div class="video_col_one">
             <video width="400" height="800" controls muted=1 autoplay=1>
@@ -51,14 +48,14 @@
             <p class="post_video_text">Niqqy enjoying the best of treats.</p>
         </div>
         <div class="video_col_two">
-            <p class="video_text"><br><br><br>At Niqqy Woofaj, we thrive on the ability to get to know our clients and customize their their experience
+            <strong class="vid_col_two_header">About</strong>
+            <hr class="vid_col_two_rounded">
+            <p class="video_text">At Niqqy Woofaj, we thrive on the ability to get to know our clients and customize their experience
                 to create a good time for every doggo and assure a safe and more enjoyable experience; not only for our clients, but also for
                 their humans.
             </p>
         </div>
     </div>
-
-    <div class="spacing"></div>
 
     <div class="covid_update_text">
         <strong class="c_initial">COVID-19 UPDATE</strong>
