--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@1,700&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Amiri&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Podkova&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/6f231be1f6.js" crossorigin="anonymous"></script>
     <style>
 
@@ -40,8 +39,6 @@
         </nav>
     </div>
 
-    <div class="spacing"></div>
-
     <div class="contact_div">
         <strong class="contact_header">Get in Touch</strong>
         <hr class="contact_rounded">
@@ -59,8 +56,6 @@
             <p class="contact_number">415-555-5555</p>
         </div>
     </div>
-
-    <div class="spacing"></div>
 
     <div class="g_maps_header">
         <strong class="g_maps_text">Experience Our Three Locations!</strong>
@@ -91,8 +86,6 @@
         </div>
     </div>
 
-    <div class="spacing"></div>
-
     <div class="form_head_container">
         <h3 class="form_header">Contact Form</h3>
         <hr class="form_rounded">
@@ -100,21 +93,21 @@
     <div class="form_container">
         <!-- commenting out form action because we dont learn php yet -->
         <!-- <form action="/action_page.php"> -->
-        <label for="fname">First Name</label>
-        <input type="text" id="fname" name="firstname" placeholder="Your first name...">
+        <label class="form_text" for="fname">First Name</label>
+        <input class="form_text" type="text" id="fname" name="firstname" placeholder="Your first name...">
 
-        <label for="lname">Last Name</label>
-        <input type="text" id="lname" name="lastname" placeholder="Your last name...">
+        <label class="form_text" for="lname">Last Name</label>
+        <input class="form_text" type="text" id="lname" name="lastname" placeholder="Your last name...">
 
-        <label for="country">Country</label>
-        <select id="country" name="country">
-            <option value="usa">USA</option>
-            <option value="canada">Canada</optionvalue>
+        <label class="form_text" for="country">Country</label>
+        <select class="form_text" id="country" name="country">
+            <option class="form_text" value="usa">USA</option>
+            <option class="form_text" value="canada">Canada</optionvalue>
         </select>
 
-        <label for="subject">Subject</label>
-        <textarea id="subject" name="subject" placeholder="Write message..." style="height:200px"></textarea>
-        <input type="submit" value="Submit">
+        <label class="form_text" for="subject">Subject</label>
+        <textarea class="form_text" id="subject" name="subject" placeholder="Write message..." style="height:200px"></textarea>
+        <input class="form_text" type="submit" value="Submit">
         <!-- </form> -->
     </div>
     
