--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@1,700&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Amiri&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Podkova&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/6f231be1f6.js" crossorigin="anonymous"></script>
     <style>
 
@@ -45,15 +44,6 @@
         </nav>
     </div>
 
-    <div class="hero_image">
-        <div class="hero_text">
-            <h1>henlo my name is niqqy</h1>
-            <p>and casey is my human</p>
-        </div>
-    </div>
-
-    <div class="spacing"></div>
-
     <div class="muzak_container">
         <div class="muzak_text">
             <h2 class="welcome_text">Welcome to Niqqy Woofaj!</h2>
@@ -70,27 +60,45 @@
         </div>
     </div>
 
-    <div class="spacing"></div>
+    <div class="hero_image">
+        <div class="hero_text">
+            <h1>henlo my name is niqqy</h1>
+            <p>and casey is my human</p>
+        </div>
+    </div>
 
     <div class="index_content">
         <div class="gudtime_col_one">
             <img src="img/doggos_vibin.jpg" height=400px alt="Image of dogs in sunnies.">
+            <p class="gudtime_img_text">doggos vibin'</p>
         </div>
         <div class="gudtime_col_two">
             <img src="img/look_back_at_it.jpg" height=400px alt="Image of a dog in a boat.">
+            <p class="gudtime_img_text">doggo on a boat</p>
         </div>
         <div class="gudtime_col_three">
             <img src="img/sun_bathing.jpg" height=400px alt="Image of a dog enjoying the sun.">
+            <p class="gudtime_img_text">doggo sunbathing</p>
         </div>
         <div class="gudtime_col_four">
             <img src="img/running_wild.jpg" height=400px alt="Image of a dog running free.">
+            <p class="gudtime_img_text">doggo runnin' wild</p>
         </div>
     </div>
 
-    <div class="spacing"></div>
-
     <div class="sv_pet_event">
-        <strong class="sv_event_header">Silicon Valley Pet Event (Past)</strong>
+        <div class="event_col_one">
+            <h2 class="sv_event_header">Silicon Valley Pet Event</h2>
+            <a href="https://www.svpetevents.com/">
+                <img alt="Silicon Valley Pet Event Image One" src="img/pet_event_1.jpg" height="500">
+            </a>
+        </div>
+        <div class="event_col_two">
+            <h2 class="sv_event_header">More Details</h2>
+            <a href="https://www.svpetevents.com/">
+                <img alt="Silicon Valley Pet Event Image Two" src="img/pet_event_2.jpg" height="500">
+            </a>
+        </div>
     </div>
 
     <footer>
