finishing touches added

--- a/about.html
+++ b/about.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>W4B Final Project About</title>
-
+    <!-- link css style sheet -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- add fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Podkova&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Podkova&display=swap" rel="stylesheet">
+    <!-- add icons  -->
     <script src="https://kit.fontawesome.com/6f231be1f6.js" crossorigin="anonymous"></script>
     <style>
-
+        /* body dependencies */
         body{
             background-image: url('img/nw_header_img.jpg');
             background-size: 100px;
@@ -21,14 +23,10 @@
             padding: 0;
             height: 100% + 20px;
         }
-
-        .content{
-            background-size: 100px;
-        }
-
     </style>
 </head>
 <body>
+    <!-- nav bar container -->
     <div class="container">
         <nav class="navbar">
             <!-- nav logo class="nav_logo" -->
@@ -39,6 +37,7 @@
         </nav>
     </div>
 
+    <!-- video portion -->
     <div class="video_content">
         <div class="video_col_one">
             <video width="400" height="800" controls muted=1 autoplay=1>
@@ -57,6 +56,7 @@
         </div>
     </div>
 
+    <!-- covid warning update -->
     <div class="covid_update_text">
         <strong class="c_initial">COVID-19 UPDATE</strong>
         <hr class="rounded">
@@ -65,9 +65,10 @@
         <p class="c_gen">Use our locations for pet socializing as well in accordance with COVID-19 standards.</p>
     </div>
 
+    <!-- footer references -->
     <footer>
         <a href="https://www.instagram.com/srirachy" class="fab fa-instagram"></a>
-        <a href="https://www.linkedin.com/in/caseyereyes" class="fab fa-linkedin"></a>
+        <a href="https://www.linkedin.com/in/caseyreyes" class="fab fa-linkedin"></a>
         <p class="footer_copyright">&copy; Niqqy Woofaj <script>document.write(new Date().getFullYear())</script></p>
     </footer>
 </body>
