--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>W4B Final Project Contact</title>
-
+    <!-- link css style sheet -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- add fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Podkova&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Podkova&display=swap" rel="stylesheet">
+    <!-- add icons  -->
     <script src="https://kit.fontawesome.com/6f231be1f6.js" crossorigin="anonymous"></script>
     <style>
-
+        /* body dependencies */
         body{
             background-image: url('img/nw_header_img.jpg');
             background-size: 100px;
@@ -21,14 +23,10 @@
             padding: 0;
             height: 100%;
         }
-
-        .content{
-            background-size: 1000px;
-        }
-
     </style>
 </head>
 <body>
+    <!-- nav bar container -->
     <div class="container">
         <nav class="navbar">
             <!-- nav logo class="nav_logo" -->
@@ -39,6 +37,7 @@
         </nav>
     </div>
 
+    <!-- contact portion -->
     <div class="contact_div">
         <strong class="contact_header">Get in Touch</strong>
         <hr class="contact_rounded">
@@ -57,27 +56,28 @@
         </div>
     </div>
 
+    <!-- google maps header -->
     <div class="g_maps_header">
         <strong class="g_maps_text">Experience Our Three Locations!</strong>
         <hr class="g_maps_rounded">
     </div>
-
+    <!-- google maps portion -->
     <div class="g_maps">
-        <div class="g_map_one">
+        <div class="g_map_space">
             <strong class="g_map_head">Live Oak Dog Park</strong>
             <p class="g_map_text">Santa Clara, CA 95054</p>
             <iframe width="400" height="250" style="border:1;" allowfullscreen="" loading="lazy"
                 src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d12678.014947893706!2d-121.96103396441261!3d37.401566827263935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d37.4079488!2d-121.95921919999999!4m5!1s0x808fc99e2a8ecbfd%3A0xbe0b172e64aff115!2sdog%20park%20locations!3m2!1d37.3965837!2d-121.94656579999999!5e0!3m2!1sen!2sus!4v1639533781261!5m2!1sen!2sus">
             </iframe>
         </div>
-        <div class="g_map_two">
+        <div class="g_map_space">
             <strong class="g_map_head">Basin AH1 Dog Park (New Location)</strong>
             <p class="g_map_text">Fresno, CA 93722</p>
             <iframe width="400" height="250" style="border:1;" allowfullscreen="" loading="lazy"
                 src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d1622973.5419821418!2d-122.19194365621597!3d37.39290182625888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d37.4079488!2d-121.95921919999999!4m5!1s0x8094661b26c5e119%3A0x718c35d4ada80916!2sfresno%20dog%20park!3m2!1d36.8052981!2d-119.8687192!5e0!3m2!1sen!2sus!4v1639534056177!5m2!1sen!2sus">
             </iframe>
         </div>
-        <div class="g_map_three">
+        <div class="g_map_space">
             <strong class="g_map_head">Lafayette Dog Park</strong>
             <p class="g_map_text">San Francisco, CA 94109</p>
             <iframe width="400" height="250" style="border:1;" allowfullscreen="" loading="lazy"
@@ -86,10 +86,12 @@
         </div>
     </div>
 
+    <!-- contact form header -->
     <div class="form_head_container">
         <h3 class="form_header">Contact Form</h3>
         <hr class="form_rounded">
     </div>
+    <!-- contact form portion -->
     <div class="form_container">
         <!-- commenting out form action because we dont learn php yet -->
         <!-- <form action="/action_page.php"> -->
@@ -111,9 +113,10 @@
         <!-- </form> -->
     </div>
     
+    <!-- footer references -->
     <footer>
         <a href="https://www.instagram.com/srirachy" class="fab fa-instagram"></a>
-        <a href="https://www.linkedin.com/in/caseyereyes" class="fab fa-linkedin"></a>
+        <a href="https://www.linkedin.com/in/caseyreyes" class="fab fa-linkedin"></a>
         <p class="footer_copyright">&copy; Niqqy Woofaj <script>document.write(new Date().getFullYear())</script></p>
     </footer>
 </body>
