--- a/index.html
+++ b/index.html
@@ -5,23 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>W4B Final Project Home</title>
-
+    <!-- link css style sheet -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- add fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Podkova&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Podkova&display=swap" rel="stylesheet">
+     <!-- add icons  -->
     <script src="https://kit.fontawesome.com/6f231be1f6.js" crossorigin="anonymous"></script>
     <style>
-
+        /* body dependencies */
         body{
             background-image: url('img/nw_header_img.jpg');
             background-size: 100px;
         }
-
-        .content{
-            background-size: 100px;
-        }
-
+        /* hero image dependencies */
         .hero_image{
             background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/hero_niqqy.jpg");
             background-position: center;
@@ -33,7 +31,7 @@
     </style>
 </head>
 <body>
-
+    <!-- nav bar container -->
     <div class="container">
         <nav class="navbar">
             <!-- nav logo class="nav_logo" -->
@@ -44,6 +42,7 @@
         </nav>
     </div>
 
+    <!-- music portion -->
     <div class="muzak_container">
         <div class="muzak_text">
             <h2 class="welcome_text">Welcome to Niqqy Woofaj!</h2>
@@ -60,6 +59,7 @@
         </div>
     </div>
 
+    <!-- hero image portion -->
     <div class="hero_image">
         <div class="hero_text">
             <h1>henlo my name is niqqy</h1>
@@ -67,25 +67,27 @@
         </div>
     </div>
 
+    <!-- pictures of dogs having a gudtime portion -->
     <div class="index_content">
-        <div class="gudtime_col_one">
+        <div class="gudtime_cols">
             <img src="img/doggos_vibin.jpg" height=400px alt="Image of dogs in sunnies.">
             <p class="gudtime_img_text">doggos vibin'</p>
         </div>
-        <div class="gudtime_col_two">
+        <div class="gudtime_cols">
             <img src="img/look_back_at_it.jpg" height=400px alt="Image of a dog in a boat.">
             <p class="gudtime_img_text">doggo on a boat</p>
         </div>
-        <div class="gudtime_col_three">
+        <div class="gudtime_cols">
             <img src="img/sun_bathing.jpg" height=400px alt="Image of a dog enjoying the sun.">
             <p class="gudtime_img_text">doggo sunbathing</p>
         </div>
-        <div class="gudtime_col_four">
+        <div class="gudtime_cols">
             <img src="img/running_wild.jpg" height=400px alt="Image of a dog running free.">
             <p class="gudtime_img_text">doggo runnin' wild</p>
         </div>
     </div>
 
+    <!-- event portion -->
     <div class="sv_pet_event">
         <div class="event_col_one">
             <h2 class="sv_event_header">Silicon Valley Pet Event</h2>
@@ -101,9 +103,10 @@
         </div>
     </div>
 
+    <!-- footer references -->
     <footer>
         <a href="https://www.instagram.com/srirachy" class="fab fa-instagram"></a>
-        <a href="https://www.linkedin.com/in/caseyereyes" class="fab fa-linkedin"></a>
+        <a href="https://www.linkedin.com/in/caseyreyes" class="fab fa-linkedin"></a>
         <p class="footer_copyright">&copy; Niqqy Woofaj <script>document.write(new Date().getFullYear())</script></p>
     </footer>
 </body>
