finishing touches on google map embed

--- a/contact.html
+++ b/contact.html
@@ -67,21 +67,21 @@
             <strong class="g_map_head">Live Oak Dog Park</strong>
             <p class="g_map_text">Santa Clara, CA 95054</p>
             <iframe width="400" height="250" style="border:1;" allowfullscreen="" loading="lazy"
-                src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d12678.014947893706!2d-121.96103396441261!3d37.401566827263935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d37.4079488!2d-121.95921919999999!4m5!1s0x808fc99e2a8ecbfd%3A0xbe0b172e64aff115!2sdog%20park%20locations!3m2!1d37.3965837!2d-121.94656579999999!5e0!3m2!1sen!2sus!4v1639533781261!5m2!1sen!2sus">
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12678.85797356981!2d-121.9465658!3d37.3965837!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xbe0b172e64aff115!2sLive%20Oak%20Park!5e0!3m2!1sen!2sus!4v1639555452691!5m2!1sen!2sus">
             </iframe>
         </div>
         <div class="g_map_space">
             <strong class="g_map_head">Basin AH1 Dog Park (New Location)</strong>
             <p class="g_map_text">Fresno, CA 93722</p>
             <iframe width="400" height="250" style="border:1;" allowfullscreen="" loading="lazy"
-                src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d1622973.5419821418!2d-122.19194365621597!3d37.39290182625888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d37.4079488!2d-121.95921919999999!4m5!1s0x8094661b26c5e119%3A0x718c35d4ada80916!2sfresno%20dog%20park!3m2!1d36.8052981!2d-119.8687192!5e0!3m2!1sen!2sus!4v1639534056177!5m2!1sen!2sus">
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3194.551500306556!2d-119.87090788473392!3d36.80530237511223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8094661b26c5e119%3A0x718c35d4ada80916!2sBasin%20AH1%20Dog%20Park!5e0!3m2!1sen!2sus!4v1639555488903!5m2!1sen!2sus">
             </iframe>
         </div>
         <div class="g_map_space">
             <strong class="g_map_head">Lafayette Dog Park</strong>
             <p class="g_map_text">San Francisco, CA 94109</p>
             <iframe width="400" height="250" style="border:1;" allowfullscreen="" loading="lazy"
-                src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d404820.7828836895!2d-122.47436173385567!3d37.56301778609064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d37.4079488!2d-121.95921919999999!4m5!1s0x808580c0fdea8737%3A0x9015c99596d58950!2sdog%20park%20san%20francisco!3m2!1d37.791031!2d-122.4273372!5e0!3m2!1sen!2sus!4v1639534176705!5m2!1sen!2sus">
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3152.9575231632266!2d-122.42952588471!3d37.79103521899687!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580c0fdea8737%3A0x9015c99596d58950!2sLafayette%20Park%20Dog%20Play%20Area!5e0!3m2!1sen!2sus!4v1639555522668!5m2!1sen!2sus">
             </iframe>
         </div>
     </div>
