--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     <!-- video portion -->
     <div class="video_content">
         <div class="video_col_one">
-            <video width="400" height="800" muted=1 autoplay=1>
+            <video width="400" height="800" muted=1 autoplay=1 loop=1>
                 <source src="media/nw_icecream_1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
