finishing touches to contact form

--- a/contact.html
+++ b/contact.html
@@ -98,8 +98,8 @@
         <label class="form_text" for="fname">First Name</label>
         <input class="form_text" type="text" id="fname" name="firstname" placeholder="Your first name...">
 
-        <label class="form_text" for="lname">Last Name</label>
-        <input class="form_text" type="text" id="lname" name="lastname" placeholder="Your last name...">
+        <label class="form_text" for="email">E-mail</label>
+        <input class="form_text" type="text" id="emailname" name="ename" placeholder="Your e-mail...">
 
         <label class="form_text" for="country">Country</label>
         <select class="form_text" id="country" name="country">
@@ -107,8 +107,8 @@
             <option class="form_text" value="canada">Canada</optionvalue>
         </select>
 
-        <label class="form_text" for="subject">Subject</label>
-        <textarea class="form_text" id="subject" name="subject" placeholder="Write message..." style="height:200px"></textarea>
+        <label class="form_text" for="msg">Message</label>
+        <textarea class="form_text" id="msg" name="msg" placeholder="Write message..." style="height:200px"></textarea>
         <input class="form_text" type="submit" value="Submit">
         <!-- </form> -->
     </div>
